--- a/platformio.ini
+++ b/platformio.ini
@@ -18,28 +18,33 @@ lib_deps =
 	kitesurfer1404/WS2812FX@^1.4.2
 	bodmer/TFT_eSPI@^2.5.31
 	bodmer/TFT_eWidget@^0.0.6
+	ayushsharma82/ElegantOTA @ ^2.2.9
+	neu-rah/ArduinoMenu library@^4.21.4
 monitor_speed = 115200
-
 build_flags = 
-    -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-    -D USER_SETUP_LOADED=1
-    -D ILI9341_DRIVER=1
-    -D TFT_WIDTH=320
-    -D TFT_HEIGHT=240
-    -D TFT_RST=12
-    -D TFT_CS=15
+	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+	-D USER_SETUP_LOADED=1
+	-D ILI9341_DRIVER=1
+	-D TFT_WIDTH=320
+	-D TFT_HEIGHT=240
+	-D TFT_RST=12
+	-D TFT_CS=15
 	-D TOUCH_CS=27
 	-D TFT_MISO=22
-    -D TFT_DC=13
-    -D TFT_SCLK=17
-    -D TFT_MOSI=21
-    -D LOAD_GLCD=1
-    -D LOAD_FONT2=1
-    -D LOAD_FONT4=1
-    -D LOAD_FONT6=1
-    -D LOAD_FONT7=1
-    -D LOAD_FONT8=1
-    -D LOAD_FONT8N=1
-    -D LOAD_GFXFF=1
-    -D SMOOTH_FONT=1
+	-D TFT_DC=13
+	-D TFT_SCLK=17
+	-D TFT_MOSI=21
+	-D LOAD_GLCD=1
+	-D LOAD_FONT2=1
+	-D LOAD_FONT4=1
+	-D LOAD_FONT6=1
+	-D LOAD_FONT7=1
+	-D LOAD_FONT8=1
+	-D LOAD_FONT8N=1
+	-D LOAD_GFXFF=1
+	-D SMOOTH_FONT=1
 	-D SPI_FREQUENCY=40000000
+
+[env:buttonbox-ota]
+extends = env:ttgo-t1
+upload_protocol = espota
