--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 framework = arduino
 board = ttgo-t1
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	bxparks/AceButton@^1.10.1
 	fastled/FastLED@^3.6.0
@@ -20,6 +21,7 @@ lib_deps =
 	bodmer/TFT_eWidget@^0.0.6
 	ayushsharma82/ElegantOTA @ ^2.2.9
 	neu-rah/ArduinoMenu library@^4.21.4
+	neu-rah/streamFlow
 monitor_speed = 115200
 build_flags = 
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
@@ -40,7 +42,6 @@ build_flags =
 	-D LOAD_FONT6=1
 	-D LOAD_FONT7=1
 	-D LOAD_FONT8=1
-	-D LOAD_FONT8N=1
 	-D LOAD_GFXFF=1
 	-D SMOOTH_FONT=1
 	-D SPI_FREQUENCY=40000000
